moving to laptop

--- a/thermo_problem.tex
+++ b/thermo_problem.tex
@@ -26,7 +26,7 @@ From Section~\ref{}, discarding all variables related to the mechanical problem,
 \begin{problem}[General thermal constitutive intial value problem.]
 GGiven the initial value of the internal variables \(\bm \alpha(t_0)\) and the history of the temperature distribution
 \[\theta(t),\quad t\in[t_0, t_\text{end}],\]
-find the function for $\bm q(t)$, \(s(t)\) and \(\bm \alpha(t)\) such that the constitutive equations
+find the function for $\bm q_0(t)$, \(s(t)\) and \(\bm \alpha(t)\) such that the constitutive equations
 \begin{gather}
     s = -\frac{\partial \psi}{\partial \theta},\label{eq:entropy_constitutive_relation}\\
     \psi = \psi(\theta),\\
